kubernetes/block-internet-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress-internet
spec:
  podSelector:
    matchLabels:
      app: testrunner
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        # except:
        # - <ALLOWED_CIDR>
